added update user method
